added clear button to sub product.  Going to work on logic in serves js mode for switching between payment and subscription mode

--- a/server/public/index.css
+++ b/server/public/index.css
@@ -56,7 +56,7 @@ input {
   
 }
 
-#onebutton, #twobutton, #threebutton, #clearone, #cleartwo{
+#onebutton, #twobutton, #threebutton, #clearone, #cleartwo, #clearthree {
   border-radius: 7px;
   border-style: none;
   font-size: 15px;
@@ -103,6 +103,10 @@ td {
   box-shadow: 3px 2px 20px;
   width: 270px
 
+}
+
+#clearthree {
+  text-align: center;
 }
 
 #cartbox {
